# image_filters

./: .clang-tidy  CMakeLists.txt  help_objects.h  image_processor.cpp  readme.md
filter_pipeline/: filter_pipeline.cpp  filter_pipeline.h
filters/: filters.cpp  filters.h
image/: image.cpp  image.h
parser/: parser.cpp  parser.h
